0028276: Visualization, Graphic3d_ArrayOfPrimitives - fix usage of 16-bit indices

Graphic3d_ArrayOfPrimitives now check the amount of vertex data rather than amount of indices.